--- a/periodico.html
+++ b/periodico.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <link rel="stylesheet" href="estilos2.css">
+    <link rel="stylesheet" href="estilos_periodico.css">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,8 @@
             <section class="barra-navegacion">
                 <section class="barra-busqueda">
                     <img class="icono-busqueda" src="img/lupa.png">
-                    <input type="text" class="entrada-barra-busqeda" placeholder="Search...">
+                    <input type="text" class="entrada-barra-busqeda"
+                        placeholder="Search...">
                 </section>
                 <section>
                     <h1>MAGDESIGN</h1>
@@ -155,13 +156,107 @@
                         </section>
                     </section>
                 </article>
+
+                <article class="articulo-noticia1">
+                    <picture>
+                        <img src="/img/img_6.jpg.jpg" alt="imagen-noticia"
+                            class="imagen-noticia">
+                    </picture>
+                    <section>
+                        <p class="categoria">Categoria</p>
+                        <h3>Titulo noticia 4</h3>
+                        <p>Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit.
+                            Proin feugiat placerat orci ut accumsan.
+                            Maecenas ac purus ultrices,
+                            ultricies mi vitae,
+                            finibus libero.</p> </section>
+                    <section class="autor">
+                        <picture>
+                            <img src="/img/autor.png" alt="Imagen-Autor"
+                                class="imagen-autor">
+                        </picture>
+                        <section>
+                            <label class="nombre-autor">Nombre Autor</label>
+                            <label class="posicion">posicion</label>
+                        </section>
+                    </section>
+                </article>
+
+                <article class="articulo-noticia2">
+                    <picture>
+                        <img src="/img/img_7.jpg.jpg" alt="imagen-noticia"
+                            class="imagen-noticia">
+                    </picture>
+                    <section>
+                        <p class="categoria">Categoria</p>
+                        <h3>Titulo noticia 5</h3>
+                        <p>Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit.
+                            Proin feugiat placerat orci ut accumsan.
+                            Maecenas ac purus ultrices,
+                            ultricies mi vitae,
+                            finibus libero.</p> </section>
+                    <section class="autor">
+                        <picture>
+                            <img src="/img/autor.png" alt="Imagen-Autor"
+                                class="imagen-autor">
+                        </picture>
+                        <section>
+                            <label class="nombre-autor">Nombre Autor</label>
+                            <label class="posicion">posicion</label>
+                        </section>
+                    </section>
+                </article>
+
+                <article class="articulo-noticia3">
+                    <picture>
+                        <img src="/img/img_2.jpg.jpg" alt="imagen-noticia"
+                            class="imagen-noticia">
+                    </picture>
+                    <section>
+                        <p class="categoria">Categoria</p>
+                        <h3>Titulo noticia 6</h3>
+                        <p>Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit.
+                            Proin feugiat placerat orci ut accumsan.
+                            Maecenas ac purus ultrices,
+                            ultricies mi vitae,
+                            finibus libero.</p>
+                    </section>
+                    <section class="autor">
+                        <picture>
+                            <img src="/img/autor.png" alt="Imagen-Autor"
+                                class="imagen-autor">
+                        </picture>
+                        <section>
+                            <label class="nombre-autor">Nombre Autor</label>
+                            <label class="posicion">posicion</label>
+                        </section>
+                    </section>
+                </article>
+
+
+
             </section>
 
             <!--Most Popular post-->
-
             <section class="publicacion-popular">
-                <img src="/img/img_7.jpg.jpg" alt="">
+                <h2>MOST POPULAR</h2>  
+                <img class="imagen-publicacion-popular" src="/img/img_7.jpg.jpg"
+                    alt="">
+                <section class="autor">
+                    <picture>
+                        <img src="/img/autor.png" alt="Imagen-Autor"
+                            class="imagen-autor">
+                    </picture>
+                    <section>
+                        <label class="nombre-autor">Nombre Autor</label>
+                        <label class="posicion">posicion</label>
+                    </section>
+                </section>
             </section>
+
 
             <!--subscripcion-->
 
@@ -171,7 +266,8 @@
             <section class="contenido-subscripcion">
                 <h4>Subscribe to newsletter</h4>
                 <section class="formulario-subscripcion">
-                    <input type="email" class="email" placeholder="Enter your email">
+                    <input type="email" class="email" placeholder="Enter your
+                        email">
                     <input type="submit" class="btSubscripcion"
                         value="SUBSCRIBE">
                 </section>
