--- a/periodico.html
+++ b/periodico.html
@@ -31,7 +31,7 @@
                     </section>
 
                     <section class="menu">
-                        <section class="redes-sociales-nav">
+                        <section class="redes-">
 
                             <img class="logos" src="/img/Twitter.png" alt="botón
                                 para ir a Twitter">
