--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2>Trending</h2>
                 <section class="grid-container-trending">
 
-                    <img src="/img/img_2.jpg.jpg"
+                    <img src="/img/img_2.jpg"
                         class="imagen-noticia-trending">
                     <article>
                         <label class="categoria-noticia">Business, travel
@@ -99,7 +99,7 @@
 
                 <article class="articulo-noticia">
                     <picture>
-                        <img src="/img/img_3.jpg.jpg" alt="imagen-noticia"
+                        <img src="/img/img_3.jpg" alt="imagen-noticia"
                             class="imagen-noticia">
                     </picture>
                     <section>
@@ -128,7 +128,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_4.jpg.jpg" alt="imagen-noticia"
+                            <img src="/img/img_4.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -160,7 +160,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_5.jpg.jpg" alt="imagen-noticia"
+                            <img src="/img/img_5.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -192,7 +192,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_6.jpg.jpg" alt="imagen-noticia"
+                            <img src="/img/img_6.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -220,7 +220,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_7.jpg.jpg" alt="imagen-noticia"
+                            <img src="/img/img_7.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -252,7 +252,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_2.jpg.jpg" alt="imagen-noticia"
+                            <img src="/img/img_2.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -290,7 +290,7 @@
                 <section class="publicacion-popular">
                     <h2>MOST POPULAR</h2>
                     <img class="imagen-publicacion-popular"
-                        src="/img/img_7.jpg.jpg"
+                        src="/img/img_7.jpg"
                         alt="">
 
                     <label class="categoria-noticia">Business, travel
