--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <section class="menu">
                         <section class="redes-">
 
-                            <img class="logos" src="/img/Twitter.png" alt="botón
+                            <img class="logos" src="img/Twitter.png" alt="botón
                                 para ir a Twitter">
 
                             <img class="logos" src="img/Facebook.png" alt="botón
@@ -60,7 +60,7 @@
                 <h2>Trending</h2>
                 <section class="grid-container-trending">
 
-                    <img src="/img/img_2.jpg"
+                    <img src="img/img_2.jpg"
                         class="imagen-noticia-trending">
                     <article>
                         <label class="categoria-noticia">Business, travel
@@ -80,7 +80,7 @@
 
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -99,7 +99,7 @@
 
                 <article class="articulo-noticia">
                     <picture>
-                        <img src="/img/img_3.jpg" alt="imagen-noticia"
+                        <img src="img/img_3.jpg" alt="imagen-noticia"
                             class="imagen-noticia">
                     </picture>
                     <section>
@@ -116,7 +116,7 @@
                         </label>
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -128,7 +128,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_4.jpg" alt="imagen-noticia"
+                            <img src="img/img_4.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -148,7 +148,7 @@
                         </section>
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -160,7 +160,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_5.jpg" alt="imagen-noticia"
+                            <img src="img/img_5.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -180,7 +180,7 @@
                         </section>
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -192,7 +192,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_6.jpg" alt="imagen-noticia"
+                            <img src="img/img_6.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -208,7 +208,7 @@
                                 finibus libero.</p> </section>
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -220,7 +220,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_7.jpg" alt="imagen-noticia"
+                            <img src="img/img_7.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -240,7 +240,7 @@
                         </section>
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -252,7 +252,7 @@
 
                     <article class="articulo-noticia">
                         <picture>
-                            <img src="/img/img_2.jpg" alt="imagen-noticia"
+                            <img src="img/img_2.jpg" alt="imagen-noticia"
                                 class="imagen-noticia">
                         </picture>
                         <section>
@@ -272,7 +272,7 @@
                         </section>
                         <section class="autor">
                             <picture>
-                                <img src="/img/autor.png" alt="Imagen-Autor"
+                                <img src="img/autor.png" alt="Imagen-Autor"
                                     class="imagen-autor">
                             </picture>
                             <section>
@@ -290,7 +290,7 @@
                 <section class="publicacion-popular">
                     <h2>MOST POPULAR</h2>
                     <img class="imagen-publicacion-popular"
-                        src="/img/img_7.jpg"
+                        src="img/img_7.jpg"
                         alt="">
 
                     <label class="categoria-noticia">Business, travel
@@ -299,7 +299,7 @@
 
                     <section class="autor">
                         <picture>
-                            <img src="/img/autor.png" alt="Imagen-Autor"
+                            <img src="img/autor.png" alt="Imagen-Autor"
                                 class="imagen-autor">
                         </picture>
                         <section>
@@ -331,19 +331,19 @@
                 <section class="contenido-index">
                     <section class="redes-sociales">
                         <picture>
-                            <img class="logo-redes" src="/img/Facebook.png"
+                            <img class="logo-redes" src="img/Facebook.png"
                                 alt="">
                         </picture>
                         <picture>
-                            <img class="logo-redes" src="/img/Twitter.png"
+                            <img class="logo-redes" src="img/Twitter.png"
                                 alt="">
                         </picture>
                         <picture>
-                            <img class="logo-redes" src="/img/linkedin.png"
+                            <img class="logo-redes" src="img/linkedin.png"
                                 alt="">
                         </picture>
                         <picture>
-                            <img class="logo-redes" src="/img/youtube.png"
+                            <img class="logo-redes" src="img/youtube.png"
                                 alt="">
                         </picture>
                     </section>
