--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                         </section>
 
-                        <img class="menu-burger" src="/img/burger.png"
+                        <img class="menu-burger" src="img/burger.png"
                             alt="botón de
                             menu">
                     </section>
